styles/settings.css
body{
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
}

.container 
{
    max-height: 100vh;
    max-width: 100vw;
    min-height: 80%;
    min-width: 80%;
    width: 1575px;
    background-image: url(../images/settings/sunset_UHD.avif);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}
.options
{
    position: absolute;
    visibility: hidden;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    background-color: #5b0a2cc3;
    z-index: 10;
    border-radius: 12px;
    padding: 2em 0.5em;
    padding-top: 0;
    max-width: 80vw;
}
.options.open
{
    animation-name: openDisplay;
    animation-duration: 2s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: forwards;
}
.options.open > div {
    visibility: hidden;
    animation: display .1s linear 2s forwards;
    min-height: var(--minHeightContainer);
}
.boat-helm{
    visibility: hidden;
    position: absolute;
    filter: invert(1) brightness(0.9);
    animation: settings-entrance 2s ease-in-out 2s forwards ;
    transform-origin: center;
}
.options  ul {
    display: flex;
    justify-content: space-around;
    padding-inline-start: 0;
    padding-top: 2em;
}
.options ul > li, .options ul > li > label{
    cursor: pointer;
}
.options ul label {
    position: relative;
}
.options ul label::before{
    position: absolute;
    content: "";
    display: inline-block;
    text-align: center;
    top: 102%;
    background-color: white;
    width: 0;
    height: 0;
    transition: all .4s;
    margin: 0 auto;
    left: 0;
    right: 0;
}

.options ul input:checked + label::before {
    width: 100%;
    height: 1px;
    
}
.options-content{
    display: flex;
    justify-content: center;
    height: calc(var(--minHeightContainer) - 5em);
    align-items: center;
    width: 350px;
    max-width: 100vw;
    margin: auto;
    position: relative;
}
.skins{
    display: flex;
    /* flex-wrap: wrap; */
    justify-content: flex-start;
    height: calc(var(--minHeightContainer) - 5em);
    align-items: center;
    overflow-y: auto;
    min-width: 300px;
    width: 300px;
    max-width: 100vw;
    margin: auto;
    position: relative;
    scroll-behavior: smooth;
}
.chevronLeft,.chevronRight{
    display: block;
    height: 3em;
    width: 1.5em;
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    background-color: transparent;
    border: none;
}
.chevronLeft{
    background-image: url(../images/arrows/chevron-left.svg);
}
.chevronRight{
    background-image: url(../images/arrows/chevron-right.svg);
}
@keyframes settings-entrance {
    0%{
        visibility: visible;
        top: 0;
        right:50%;
        transform: translateX(-50%) rotate(0);
    }
    30%{
        visibility: visible;
        top: 3%;
        right:50%;
        transform: translateX(-50%) rotate(0);
    }
    45%{
        visibility: visible;
        top: 1%;
        right:50%;
        transform: translateX(-50%) rotate(0);
    }
    60%{
        visibility: visible;
        top: 2%;
        right:50%;
        transform: translateX(-50%) rotate(0);
    }
    100%{
        visibility: visible;
        top: 2%;
        right:calc(10% + 6em);
        transform: translateX(-50%) rotate(720deg);
    }
}
@keyframes display {
    0%{
        visibility: hidden;
    }
    100%{
        visibility: visible;
    }
}

/* SKINS */
.skinContainer{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    height: 70%;
    width: 300px;
    min-width: 300px;
    max-width: 100vw;
}

.skinPicture{
    max-width: 256px;
    max-height: 100%;
    animation: 3s linear myBoat 0s infinite alternate;
    
}

.selectButton {
    display:block;
    background-image: url(../images/settings/wood_texture.avif);
    -webkit-background-size: cover;
    background-size: cover;
    position: relative;
    color: white;
    padding: .5rem 1.225rem  ;
    letter-spacing: 1px;
    box-shadow: 0 5px 25px #1e1d1d, 0px 0px 0px 6px rgb(213, 181, 0) inset;
    border: none;
}
.selectButton.selected{
    box-shadow: 0 5px 25px rgb(176, 149, 0), 0px 0px 0px 6px rgb(213, 181, 0) inset;
}
.selectButton::before
{
    content: "";
    display: block;
    position: absolute;
    left: 1px;
    right: 1px;
    top: 1px;
    bottom: 1px;
    box-shadow: rgb(241, 242, 243) 1px 1px 1px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
}

